# issue-search-mcp

./: LICENSE  README.md  logs.txt  main.py  pyproject.toml  requirements.txt
src/: __init__.py  service.py  tool.py
src/issue_search_mcp/: __init__.py  service.py  tool.py
